# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gmtl/: AABox.h  AABoxOps.h  AxisAngle.h  AxisAngleOps.h  Containment.h  Coord.h  CoordOps.h  EulerAngle.h  EulerAngleOps.h  Frustum.h  Generate.h  Helpers.h  Intersection.h  LineSeg.h  LineSegOps.h  Math.h  Matrix.h  MatrixOps.h  Output.h  ParametricCurve.h  Plane.h  PlaneOps.h  Point.h  Quat.h  QuatOps.h  Ray.h  RayOps.h  Sphere.h  SphereOps.h  Tri.h  TriOps.h  Vec.h  VecBase.h  VecExprMeta.h  VecOps.h  VecOpsMeta.h  Xforms.h
include/gmtl/Fit/: GaussPointsFit.h
include/gmtl/Misc/: MatrixConvert.h
include/gmtl/Util/: Meta.h
lib/meml/: CMakeLists.txt
lib/meml/include/meml/: DummyHeader.h
lib/meml/tests/: CMakeLists.txt
src/: CMakeLists.txt  Color.h  EntryPoint.cpp  Image.h
src/Public/: Color.h  Image.h  Material.h  MyMath.h  Object.h  Raytracer.h  Scene.h
src/tests/: CMakeLists.txt  ColorTest.cpp  SanityCheck.cpp
